[gd_scene load_steps=2 format=3 uid="uid://dqwqyj03vmx53"]

[ext_resource type="Script" uid="uid://geay3o7hdql0" path="res://ui/ClipboardManager.gd" id="1"]

[node name="ClipboardManager" type="AcceptDialog"]
title = "Clipboard Manager"
size = Vector2i(520, 360)
exclusive = false
script = ExtResource("1")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 12.0
offset_top = 12.0
offset_right = -12.0
offset_bottom = -12.0

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="ShowButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Show Godot Clipboard"

[node name="PasteFromOSButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Paste from OS"

[node name="ClearButton" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Clear"

[node name="ClipboardView" type="TextEdit" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
wrap_mode = 1
